<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".Task2">

    <EditText
        android:id="@+id/edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/edit_text_hint"
        android:inputType="textUri"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toTopOf="@id/submit_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_btn_name"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@id/edit_text"
        app:layout_constraintStart_toStartOf="@id/edit_text"
        app:layout_constraintTop_toBottomOf="@+id/edit_text" />

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:padding="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@id/edit_text"
        app:layout_constraintStart_toStartOf="@id/edit_text"
        app:layout_constraintTop_toBottomOf="@id/submit_btn"/>

    <Button
        android:id="@+id/go_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_back_btn"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/image_view"
        app:layout_constraintStart_toStartOf="@id/edit_text"
        app:layout_constraintEnd_toEndOf="@id/edit_text" />

</androidx.constraintlayout.widget.ConstraintLayout>